# dspaces

./: .clang-format  CMakeLists.txt  COPYRIGHT  README.md
.github/workflows/: cmake.yml  format.yml
bindings/: CMakeLists.txt
bindings/fortran/: CMakeLists.txt  dspaces_f2c.c  dspaces_mod.f90
bindings/python/: CMakeLists.txt  dspaces.py  dspaces_wrapper.c  dspaces_wrapper.h  dspaces_wrapper.i
cmake/: FindDRC.cmake
examples/: Makefile  opts.mk
examples/ex1_putget/: Makefile  dataspaces.conf  get.c  put.c
examples/ex2_boundingBox/: dataspaces.conf  get.c  put.c
examples/ex3_minmax/: Makefile  dataspaces.conf  minmaxavg_reader.c  minmaxavg_writer.c
include/: CMakeLists.txt  CppWrapper.h  MapWrap.hh  bbox.h  dspaces-client.h  dspaces-common.h  dspaces-server.h  dspaces.h  dspacesp.h  gspace.h  list.h  queue.h  sfc.h  ss_data.h  util.h
scripts/: format.sh
src/: CMakeLists.txt  CppWrapper.cc  MapWrap.cc  bbox.c  dspaces-client.c  dspaces-config.cmake.in  dspaces-server.c  dspaces.pc.in  ss_data.c  util.c
tests/: CMakeLists.txt  server.c  terminator.c  test_get_run.c  test_put_dyn_run.c  test_put_run.c  test_reader.c  test_reader.f90  test_script.sh  test_script.sh.in  test_sub.c  test_sub_run.c  test_writer.c  test_writer.f90  test_writer_dyn.c  test_writer_server.c  timer.c  timer.h
